<resources>
    <string name="app_name">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_a_account_register_now">Don\'t have a Account?   <font color="#FF0000"><a>Register now!</a></font></string>
    <string name="already_have_an_account_login_now">Already have an Account?<font color="#FF0000"><a> Login now!</a></font></string>
    <string name="profile_icon">profile icon</string>
    <string name="want_to_delete_account_click_below_button_for_parmanently_delete_your_account">Want to <font color="#FF0000"><a>Delete</a></font> Account? <font color="#2196F3"><a>Click</a></font> below button for permanently <font color="#FF0000"><a>Delete</a></font> your Account!</string>
    <string name="delete">Delete</string>
    <string name="for_changing_password_type_username_and_new_password">For Changing password type UserName and New Password!</string>
    <string name="new_password">New Password</string>
    <string name="username">UserName</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings :</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Add">Add new note</string>
    <string name="nothing_to_show_please_add_new_notes">Nothing to show! \n Please Add new Notes!</string>
    <string name="write_your_task_here">Write Your Note Here:</string>
    <string name="save">save</string>
    <string name="edit">Edit</string>
    <string name="write_here">Write Description here...</string>
    <string name="title">Title</string>
    <string name="update">Update</string>
</resources>