<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settingmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/logoutmenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/logout"
        app:showAsAction="withText" />
</menu>