<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NewNotesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="9"
                android:fontFamily="monospace"
                android:padding="5dp"
                android:text="@string/write_your_task_here"
                android:textColor="#878989"
                android:textColorHint="#5B715C"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <Button
                android:id="@+id/buttonsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FFFCFC"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="false"
            android:textIsSelectable="true"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editwordDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="web|phone"
            android:background="@null"
            android:contextClickable="true"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:gravity="start|top"
            android:hint="@string/write_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textColorHint="#818381"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>
</FrameLayout>